[gd_scene load_steps=6 format=3 uid="uid://u100efg2u1g6"]

[ext_resource type="Script" path="res://ui/move_details_panel.gd" id="1_h05tc"]
[ext_resource type="Texture2D" uid="uid://dbfeeyycjg0md" path="res://assets/sprites/combat/Reagents/FireOrbStill.png" id="3_pv2e3"]
[ext_resource type="FontFile" uid="uid://bn1yp4fkor0tt" path="res://assets/fonts/Handwriting_V2-Regular.ttf" id="4_sitje"]

[sub_resource type="LabelSettings" id="LabelSettings_1x60e"]
font = ExtResource("4_sitje")
font_color = Color(0, 0, 0, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6rb8a"]
line_spacing = -1.0
font = ExtResource("4_sitje")
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="MoveDetailsPanel" type="MarginContainer"]
offset_right = 173.0
offset_bottom = 102.0
size_flags_horizontal = 3
script = ExtResource("1_h05tc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = -1

[node name="NameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Name"
label_settings = SubResource("LabelSettings_1x60e")

[node name="Components" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_constants/separation = 1

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Components"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_pv2e3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/Components"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_pv2e3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="VBoxContainer/Components"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_pv2e3")
expand_mode = 3
stretch_mode = 5

[node name="TextureRect4" type="TextureRect" parent="VBoxContainer/Components"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("3_pv2e3")
expand_mode = 3
stretch_mode = 5

[node name="DamageTypeLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Damage: XXX"
label_settings = SubResource("LabelSettings_6rb8a")

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(147, 0)
layout_mode = 2
text = "Description: This is a test to see how the new line looks"
label_settings = SubResource("LabelSettings_6rb8a")
autowrap_mode = 3
